form borrar cliente
Actualizado con form BorrarCliente y cambios propuestos por el profe.

--- a/src/igu/BuscarCliente.form
+++ b/src/igu/BuscarCliente.form
@@ -80,24 +80,22 @@
                               <Component id="jLabel3" alignment="1" min="-2" pref="60" max="-2" attributes="0"/>
                               <Component id="jLabel7" alignment="1" min="-2" pref="77" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
+                                  <Component id="sButton1" min="-2" pref="78" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="sButton" min="-2" pref="66" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" attributes="0">
-                                  <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txt_apellido" min="-2" pref="267" max="-2" attributes="0"/>
-                                      <Component id="txt_nombre" min="-2" pref="267" max="-2" attributes="0"/>
-                                      <Component id="txt_ciudad" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
-                                      <Component id="txt_dni" alignment="0" min="-2" pref="77" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="txtTel" min="-2" pref="110" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
+                              <Component id="txt_apellido" min="-2" pref="267" max="-2" attributes="0"/>
+                              <Component id="txt_nombre" min="-2" pref="267" max="-2" attributes="0"/>
+                              <Component id="txt_ciudad" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
+                              <Component id="txt_dni" alignment="0" min="-2" pref="77" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="txtTel" min="-2" pref="110" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
@@ -146,9 +144,12 @@
                       <Component id="txt_dni" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                  <Component id="sButton" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="43" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="sButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="sButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -343,6 +344,21 @@
               <Dimension value="[30, 30]"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="sButton1">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="cc" red="cc" type="rgb"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="33" green="33" red="33" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Limpiar"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="sButton1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
